--- a/be/issue-tracker-be/build.gradle
+++ b/be/issue-tracker-be/build.gradle
@@ -24,12 +24,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+ㄹ    implementation 'org.projectlombok:lombok:1.18.16'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'com.auth0:java-jwt:3.8.3'
+
 
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.8'
     implementation 'org.springdoc:springdoc-openapi-data-rest:1.5.8'
