fix: 🐞clientID 숨기기(#142)
보안을 강화하기 위함이나 이전과 비슷한 수준

--- a/ios/IssueTracker/IssueTracker/SupportingFiles/Info.plist
+++ b/ios/IssueTracker/IssueTracker/SupportingFiles/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ClientID</key>
+	<string>d6bdd4d0080b0747d4f1</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
